--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
-<body style="width:200px;height:100px;display:flex;align-items:center;justify-content:center;">
-  <button id="print">Print to PDF</button>
+<body style="width:300px;padding:20px;font-family:Arial,sans-serif;">
+  <div style="margin-bottom:15px;">
+    <input type="text" id="token" placeholder="Enter pCloud auth token" style="width:100%;padding:8px;margin-bottom:10px;">
+    <button id="saveToken" style="width:100%;padding:8px;background:#28a745;color:white;border:none;border-radius:4px;">Save Token</button>
+  </div>
+  
+  <div style="text-align:center;">
+    <button id="print" style="padding:12px 20px;background:#007bff;color:white;border:none;border-radius:4px;">Print to PDF & Upload</button>
+  </div>
+  
+  <div id="status" style="margin-top:10px;font-size:12px;text-align:center;"></div>
+  
   <script src="popup.js"></script>
 </body>
 </html>
