--- a/popup.html
+++ b/popup.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
 <html>
-<body style="width:300px;padding:20px;font-family:Arial,sans-serif;">
-  <div style="margin-bottom:15px;">
-    <input type="text" id="token" placeholder="Enter pCloud auth token" style="width:100%;padding:8px;margin-bottom:10px;">
-    <button id="saveToken" style="width:100%;padding:8px;background:#28a745;color:white;border:none;border-radius:4px;">Save Token</button>
+<head>
+  <meta charset="utf-8">
+  <script src="tailwind.js"></script>
+</head>
+<body class="w-80 p-6 bg-gray-50">
+  <div class="space-y-4">
+    <!-- Token Section -->
+    <div class="space-y-2">
+      <input 
+        type="text" 
+        id="token" 
+        placeholder="Enter pCloud auth token" 
+        class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent text-sm"
+      >
+      <button 
+        id="saveToken" 
+        class="w-full py-2 px-4 bg-green-600 hover:bg-green-700 text-white font-medium rounded-md transition-colors text-sm"
+      >
+        Save Token
+      </button>
+    </div>
+    
+    <!-- Main Action -->
+    <div class="flex justify-center pt-2">
+      <button 
+        id="print" 
+        class="px-6 py-3 bg-blue-600 hover:bg-blue-700 text-white font-medium rounded-md transition-colors disabled:opacity-60 disabled:cursor-not-allowed"
+      >
+        Print to PDF & Upload
+      </button>
+    </div>
+    
+    <!-- Status -->
+    <div 
+      id="status" 
+      class="text-center text-sm min-h-[20px] transition-colors"
+    ></div>
   </div>
-  
-  <div style="text-align:center;">
-    <button id="print" style="padding:12px 20px;background:#007bff;color:white;border:none;border-radius:4px;">Print to PDF & Upload</button>
-  </div>
-  
-  <div id="status" style="margin-top:10px;font-size:12px;text-align:center;"></div>
   
   <script src="popup.js"></script>
 </body>
